--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
                 <meta charset="utf-8" emacsmode="-*- markdown -*-">
-                            **Starter Document**
+                            **Blog**
 
 Welcome to Markdeep. It's the simple way to write plain text with
-_style_. From https://casual-effects.com/markdeep.
+_style_. From [markdeep](https://casual-effects.com/markdeep).
 
 Section
 ===============================================================================
